--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Mon Sep 02 23:09:16 EDT 2019
+#Mon Sep 09 16:18:51 EDT 2019
 spawn-protection=16
 max-tick-time=60000
 query.port=25565
@@ -11,7 +11,7 @@ gamemode=survival
 broadcast-console-to-ops=true
 enable-query=false
 player-idle-timeout=0
-difficulty=easy
+difficulty=hard
 spawn-monsters=true
 broadcast-rcon-to-ops=true
 op-permission-level=4
@@ -37,10 +37,10 @@ spawn-animals=true
 white-list=false
 rcon.password=
 generate-structures=true
-max-build-height=256
 online-mode=true
+max-build-height=256
 level-seed=
-use-native-transport=true
 prevent-proxy-connections=false
-enable-rcon=false
+use-native-transport=true
 motd=A Minecraft Server
+enable-rcon=false
